--- a/install.cfg
+++ b/install.cfg
@@ -3,7 +3,7 @@
 # Install configuration settings
 
 
-export INST_PREFIX="$HOME/tmp/xusr"
+export INST_PREFIX="$HOME/usr"
 export EXEC_PREFIX="q_"
 export INST_LOG=${INST_PREFIX}/etc/qsc/install.list
 
